Fix alignment of divs inside social dropdown

--- a/runestone/common/css/runestone-custom-sphinx-bootstrap.css
+++ b/runestone/common/css/runestone-custom-sphinx-bootstrap.css
@@ -341,7 +341,8 @@ div.container {
     margin-bottom: -6px;
 }
 
-.dropdown-menu > li > span {
+.dropdown-menu > li > span,
+.dropdown-menu > li > div {
     display: block;
     padding: 3px 20px;
     clear: both;
